--- a/XamarinFormsSandbox/XamarinFormsSandbox/OpacitySlider.xaml
+++ b/XamarinFormsSandbox/XamarinFormsSandbox/OpacitySlider.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              mc:Ignorable="d"
-             x:Class="XamarinFormsSandbox.MainPage"
+             x:Class="XamarinFormsSandbox.OpacitySlider"
              BackgroundColor="#2B2B2B">
     <StackLayout HorizontalOptions="Center" 
                  VerticalOptions="Center" 
